# machin

./: .gitignore  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-CC  LICENSE-CC0  README.md  build.py  generate.py  pyproject.toml  requirements.txt  template.pi  update_codes.py
.github/scripts/: check_version_number.py  make_release.py  update_version_number.py  upload_to_zenodo.py
.github/workflows/: archive.yml  build.yml  test-and-build.yml  update-version-number.yml
data/: contributors  editors
files/: sty.css
formulae/: M000000000.pi  M000000001.pi  M000000004.pi  M000000005.pi  M000000006.pi  M000000007.pi  M000000008.pi  M000000009.pi  M000000010.pi  M000000011.pi  M000000015.pi  M000000017.pi  M000000020.pi  M000000024.pi  M000000025.pi  M000000027.pi  M000000028.pi  M000000029.pi  M000000034.pi  M000000035.pi  M000000036.pi  M000000038.pi  M000000040.pi  M000000043.pi  M000000044.pi  M000000046.pi  M000000048.pi  M000000051.pi  M000000055.pi  M000000059.pi  M000000060.pi  M000000062.pi  M000000064.pi  M000000069.pi  M000000070.pi  M000000073.pi  M000000074.pi  M000000079.pi  M000000084.pi  M000000088.pi  (+25975 more)
machin/: __init__.py  formulae.py  settings.py
pages/: 404.html  citing.md  contributors.md  csv.md  index.md  machin-like.md  random.html  random.md
references/: arndt1993  hcl1997  jones1706  jww1938  machin1706  machination  stormer1896  wrench-thesis
template/: intro.html
test/: test_formulae.py  test_pi.py  test_references.py
